--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "axios": "^1.9.0",
     "expo": "~53.0.7",
     "expo-router": "^5.0.5",
     "expo-splash-screen": "^0.30.8",
     "expo-status-bar": "~2.2.3",
+    "jwt-decode": "^4.0.0",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-dotenv": "^3.4.11",
     "react-native-reanimated": "^3.17.5"
   },
   "devDependencies": {
