--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-dotenv": "^3.4.11",
-    "react-native-reanimated": "^3.17.5"
+    "react-native-reanimated": "^3.17.5",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
