--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,12 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.2",
     "axios": "^1.9.0",
-    "expo": "~53.0.7",
-    "expo-router": "^5.0.5",
+    "expo": "^53.0.8",
+    "expo-audio": "~0.4.4",
+    "expo-av": "~15.1.4",
+    "expo-document-picker": "~13.1.5",
+    "expo-image-picker": "~16.1.4",
+    "expo-router": "^5.0.6",
     "expo-splash-screen": "^0.30.8",
     "expo-status-bar": "~2.2.3",
     "jwt-decode": "^4.0.0",
