--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "expo-splash-screen": "^0.30.8",
     "expo-status-bar": "~2.2.3",
     "jwt-decode": "^4.0.0",
+    "mongoose": "^8.14.1",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-dotenv": "^3.4.11",
