--- a/frontend/app.json
+++ b/frontend/app.json
@@ -37,6 +37,12 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "11c1b0bc-2e48-442f-8a86-aa9750996b7a"
+      }
     }
   }
 }
